update requirements for new venv post-rename; add click as dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
+cffi==1.17.1
+charset-normalizer==3.4.3
+click==8.2.1
+cryptography==45.0.6
 packaging==25.0
 pdf2image==1.17.0
+pdfminer.six==20250506
 pillow==11.3.0
+pycparser==2.22
 pytesseract==0.3.13
+python-dotenv==1.1.1
