re-add pytest as dev dependency with uv

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "quaint"
-version = "0.1.0"
+version = "0.1.2"
 authors=[
     { name = "John Hudson", email = "jh@ingratexr.com" },
 ]
@@ -26,6 +26,7 @@ quaint = "quaint.cli.main:main"
 
 [dependency-groups]
 dev = [
+    "pytest>=8.4.1",
     "twine>=6.1.0",
 ]
 
